tests/diagnostics_golden/diag_lifetime_violation.txt
Diagnostics Golden: Lifetime Violation
Source: tests/negative/neg_own_lifetime.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_lifetime.safe:12:14: error: returned observe value cannot outlive lender 'ref'
  |
  | 12 |       return ref  -- ERROR: borrowed value outlives lender
  |    |              ^~~
  |
  note: borrowed and observed values must remain within the lender lifetime.
  note: rule: Safe §2.3.3 / §2.3.4a (lifetime containment)
------------------------------------------------------------------------
